<resources>
    <string name="app_name">Kids Saftey</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="click_when_you_are_in_danger">Click when you are in danger</string>
    <string name="in_case_of_emergency_keep_inform_family_memebers">In case of emergency,keep inform family members</string>
    <string name="security">Security</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">my profile</string>
    <string name="my_dashboard">My DashBoard</string>
    <string name="invite">INVITE</string>
    <string name="anusha">Anusha</string>
    <string name="_9th_buildind_2nd_floor_maldiv_road_manali_9th_buildind_2nd_floor_9th_buildind_2nd_floor">9th building, 2nd floor, maldiv road, manali 9th buildind, 2nd floor 9th buildind, 2nd floor,</string>
    <string name="_16_40">16:40</string>
    <string name="_90">90%</string>
    <string name="_223m">223M</string>
    <string name="wifi">WiFi</string>
    <string name="back">Back</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email-ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="design">Design</string>
    <string name="please_wait">Please Wait</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="enter_your_e_mail_address_and_we_ll_send_you_an_email_to_reset_your_password">Enter your email address and we will send you an email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="default_web_client_id_auth">51293188360-abqko99pcavuodcncl3ih1mkgdhsmpf0.apps.googleusercontent.com</string>
    <string name="your_invites">Your Invites :</string>
    <string name="Invite">Invite</string>
    <string name="enter_email_of_whom_you_want_to_invite">Enter Email of whom you want to invite</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required For This App</string>
    <string name="enable_now">Enable Now</string>
    <string name="username">Username</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>