<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/red_card"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/SOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/red_card"
        app:layout_constraintTop_toTopOf="@id/red_card"
        />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/SOS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/in_case_of_emergency_keep_inform_family_memebers"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/red_card"/>
    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/red_card"
        app:layout_constraintEnd_toEndOf="@id/red_card"
        app:layout_constraintTop_toTopOf="@id/red_card"/>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/green_card"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/red_card"
        />
    <TextView
        android:id="@+id/Guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/Guard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/click_when_you_are_in_danger"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/green_card"/>
    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"/>

    <EditText
        android:id="@+id/invite_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:textColorHint="#2196F3"
        android:hint="@string/enter_email_of_whom_you_want_to_invite"
        app:layout_constraintBottom_toBottomOf="@id/send_invite"
        app:layout_constraintEnd_toStartOf="@id/send_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_invite"
        android:backgroundTint="@color/lightBlue"/>

    <Button
        android:id="@+id/send_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Invite"
        android:backgroundTint="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/green_card" />

    <TextView
        android:id="@+id/your_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/your_invites"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invite_mail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invite_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_invites"
        tools:listitem="@layout/item_invite_mail" />


</androidx.constraintlayout.widget.ConstraintLayout>
